# rpom-fba

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  GCF_000011965-missing-rxns.html  HISTORY.rst  README.md  gap-filled reactions.xlsm  gap-filled reactions.xlsx  main.py  memote.ini  model.yml  pyproject.toml  requirements.txt
base_model/: Rpom_0.mat  Rpom_0.xml  Rpom_02.mat  Rpom_02.xml  Rpom_025.mat  Rpom_025.xml  Rpom_03.mat  Rpom_03.xml  Rpom_035.mat  Rpom_035.xml  Rpom_04.mat  Rpom_04.xml  Rpom_045.mat  Rpom_045.xml  Rpom_05.mat  Rpom_05.xml  Rpom_055.mat  Rpom_055.xml  Rpom_06.mat  Rpom_06.xml  mat_to_sbml.py  rpom-representative-genome.fba  rpom-representative-genome.lp  rpom-representative-genome.sol  rpom-representative-genome.xml  rpom-representative-genome__dev.fba.txt  validate_migration.py
clean_models/: biomass.py  clean_models.py  make_cleaned_models.py
data/: All-reactions-of-R.-pomeroyi-DSS-3-+-Pathways.tsv  Metabolic Inventory.xlsx  ODcounts_calibration.xlsx  R&P&PHB_Rpom_231108.xlsx  README  biocyc_metabolite_annotations.xlsx  clean_drawdown_data.py  clean_growth_data.py  core_biomass.json  drawdown_raw.xlsx  files.py  growth_curves_clean.csv  growth_curves_raw.csv  uptake_rates.xlsx
experiments/: baseline.py  cue.py  cue2.py  cue2_tester.ipynb  dFBA.ipynb  dFBA.py  drawdown_experiment.json  experiment.py  fast_dFBA.py  feasibility_scan.py  fit_cue_2.py  oxygen_scan.py
figures/: acetate_debugging.ipynb  bge.ipynb  biomass_component_sources.ipynb  biomass_compostion.ipynb  diauxie_schematic.ipynb  escher.ipynb  essentiality.ipynb  glycolysis.json  (+14 more)
(+290 files in other folders)
